Comp interaction and Reactive Forms

--- a/Session-7/myapp/src/app/app.component.html
+++ b/Session-7/myapp/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>Welcome to Simplilearn Angular App</h1>
 
-<app-header></app-header>
-<app-data></app-data>
+<!--<app-header></app-header>
+<app-data></app-data> -->
+
+<app-eventbindig></app-eventbindig>
